# os-ghost

./: .env.example  .gitignore  DEPLOYMENT.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.js
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md  gmail_client_secret.json
src-tauri/src/: AUDIT_REPORT_CORE.md  AUDIT_REPORT_SYSTEM.md  action_ledger.rs  action_preview.rs  actions.rs  activity_tracker.rs  ai_client.rs  ai_provider.rs  bridge.rs  capture.rs  change_detection.rs  email.rs  events_bus.rs  game_state.rs  gemini_client.rs  history.rs  integrations.rs  intent.rs  intent_autorun.rs  ipc.rs  lib.rs  main.rs  monitor.rs  notifications.rs  ollama_client.rs  pairing.rs  perf.rs  permissions.rs  privacy.rs  rollback.rs  scheduler.rs  skills.rs  system_settings.rs  system_status.rs  timeline.rs  utils.rs  window.rs  workflows.rs
src-tauri/src/actions/: action_ledger.rs  action_preview.rs  actions.rs  mod.rs  rollback.rs  workflows.rs
src-tauri/src/agents/: AUDIT_REPORT_2024.md  callbacks.rs  critic.rs  events.rs  guardrail.rs  mod.rs  narrator.rs  observer.rs  operator.rs  orchestrator.rs  planner.rs  traits.rs  verifier.rs  watchdog.rs
src-tauri/src/ai/: ai_provider.rs  gemini_client.rs  mod.rs  ollama_client.rs  vision.rs
src-tauri/src/capture/: capture.rs  change_detection.rs  mod.rs  vision.rs
src-tauri/src/channels/: discord.rs  mod.rs  slack.rs  telegram.rs
src-tauri/src/config/: mod.rs  permissions.rs  privacy.rs  scheduler.rs  secrets.rs  server.rs  system_settings.rs  toml_config.rs
(+152 files in other folders)
