[package]
name = "os-ghost"
version = "0.1.22"
description = "The OS Ghost - A screen-aware meta-game"
authors = ["you"]
edition = "2021"
default-run = "os-ghost"

[lib]
name = "os_ghost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "native_bridge"
path = "src/bin/native_bridge.rs"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optimize tokio features - only include what we need
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "fs", "sync", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
regex = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Note: image crate removed - we use screenshots::image re-export instead
dotenvy = "0.15"
dirs = "5"

# Multi-agent system
sled = "0.34"
async-trait = "0.1"
futures = "0.3"
tempfile = "3"

# SQLite for Chrome history reading
rusqlite = { version = "0.32", features = ["bundled"] }

# Screen capture - screenshots crate is more stable
screenshots = "0.8"
tauri-plugin-updater = "2.9.0"

# macOS specific bindings - using objc2 for low-level control
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

# Windows specific bindings
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
